# cmake-and-git-describe

./: CMakeLists.txt  README.md  test.sh
include/: CMakeLists.txt  update-version.cmake  version.h.in
src/: CMakeLists.txt  main.c
